# neuralnet-locomotion

./: .gitignore  CMakeLists.txt  VisualStudio.gitignore  config.h.in  masterdemo.sln
gpu/: CMakeLists.txt  CudaSparseMatrix.h
mj_render/: CMakeLists.txt  MUJOCO_LOG.TXT  glfw_helper.h  humanoid.xml  invdoublependulum2D.xml  mj_render.cpp  walker2d.xml
mj_render/generation1000/: _0ant1  _0ant1layer_0  _0ant1layer_1  _0ant1layer_3  _0ant1topology  _0humanoidlayer_1  _0humanoidlayer_2  _0humanoidlayer_3  _0invdp2layer_1  _0invdp2layer_2  _0invdp2layer_3  _0invdp4noreclayer_1  _0invdp4noreclayer_3  _0walker2dRewardEng2layer_1  _0walker2dRewardEng2layer_2  _0walker2dRewardEng2layer_3  _0walker2dRewardEng3layer_1  _0walker2dRewardEng3layer_2  _0walker2dRewardEng3layer_3  _0walker2dRewardEng5layer_1  _0walker2dRewardEng5layer_2  _0walker2dRewardEng5layer_3  _0walker2dRewardEng5layer_4  _0walker2dRewardEng5topology  _0walker2dRewardEnglayer_2  _0walker2dRewardEnglayer_3
mj_render/generation10000/: _0humanoidlayer_0  _0humanoidlayer_1  _0humanoidlayer_2  _0humanoidlayer_3  _0humanoidlayer_4  _0invdp2dlayer_0  _0invdp2dlayer_2  _0invdp2dtopology  _0walker2dRewardEng2layer_1  _0walker2dRewardEng2layer_2  _0walker2dRewardEng2layer_3  _0walker2dRewardEng5layer_0  _0walker2dRewardEng5layer_1  _0walker2dRewardEng5layer_2  _0walker2dRewardEng5layer_3  _0walker2dRewardEng5layer_4  _0walker2dRewardEng5topology  _0walker2dRewardEnglayer_1  _0walker2dRewardEnglayer_2  _0walker2dRewardEnglayer_3
mj_render/generation17000/: _0humanoidlayer_1  _0humanoidlayer_2  _0humanoidlayer_4  _0walker2dRewardEng5layer_1  _0walker2dRewardEng5layer_2  _0walker2dRewardEng5layer_3  _0walker2dRewardEng5layer_4
mj_render/generation2000/: _0ant1layer_1  _0ant1layer_3  _0humanoidlayer_3  _0invdp2  _0invdp2dlayer_1  _0invdp2dlayer_2  _0invdp2dlayer_3  _0invdp2layer_3  _0invdp4noreclayer_0  _0invdp4noreclayer_1  _0invdp4noreclayer_2  _0invdp4norectopology  _0walker2dRewardEng  _0walker2dRewardEng2layer_1  _0walker2dRewardEng2layer_2  _0walker2dRewardEng2topology  _0walker2dRewardEng3layer_1  _0walker2dRewardEng3layer_3  _0walker2dRewardEng5  _0walker2dRewardEng5layer_1  _0walker2dRewardEng5layer_3  _0walker2dRewardEng5topology  _0walker2dRewardEnglayer_1  _0walker2dRewardEnglayer_3  _0walker2dlayer_2  _0walker2dlayer_3
mj_render/generation3000/: _0ant1layer_1  _0ant1layer_3  _0invdp2layer_1  _0invdp2layer_2  _0walker2dRewardEng2layer_2  _0walker2dRewardEng2layer_3  _0walker2dRewardEng3layer_3  _0walker2dRewardEng3layer_4  _0walker2dRewardEng5layer_1  _0walker2dRewardEng5layer_2  _0walker2dRewardEng5layer_3  _0walker2dRewardEng5layer_4  _0walker2dRewardEnglayer_1  _0walker2dRewardEnglayer_2
mj_render/generation4000/: _0ant1layer_3  _0humanoidlayer_1  _0humanoidlayer_2  _0walker2dRewardEng2layer_2  _0walker2dRewardEng2layer_3  _0walker2dRewardEng3  _0walker2dRewardEng3layer_2  _0walker2dRewardEng3layer_3  _0walker2dRewardEnglayer_2  _0walker2dlayer_1  _0walker2dlayer_3
mj_render/generation5000/: _0humanoidlayer_3  _0invdp2dlayer_1  _0invdp2dlayer_2  _0walker2dRewardEng2layer_1  _0walker2dRewardEng2layer_2  _0walker2dRewardEng2layer_3  _0walker2dRewardEng5layer_2  _0walker2dRewardEng5layer_3  _0walker2dRewardEng5layer_4  _0walker2dRewardEnglayer_2  _0walker2dRewardEnglayer_3
mj_render/generation9000/: _0humanoidlayer_2  _0humanoidlayer_3  _0humanoidlayer_4  _0humanoidtopology  _0walker2dRewardEng2layer_1  _0walker2dRewardEnglayer_2
mj_render/workinginvdp2d/: _0humanoid  _0humanoidlayer_3  _0humanoidlayer_4  _0invdp2dlayer_1  _0invdp2dlayer_2  _0invdp2dlayer_3  _0invdp2dlayer_4  _0walker2dRewardEng2layer_1  _0walker2dRewardEng3layer_1  _0walker2dRewardEng3layer_4  _0walker2dRewardEng5layer_1  _0walker2dRewardEng5layer_2  _0walker2dRewardEng5layer_4  _0walker2dlayer_2
mjenvironment/: AgentScheduler.h  CMakeLists.txt  MUJOCO_LOG.TXT  ModelSetup.h  MujocoWrapper.cpp  MujocoWrapper.h  ReadMe.txt  ant.xml  asd.mjb  environment.xml  glfwWrapper.h  halfchetah.xml  hopper.xml  humanoid.xml  humanoid100.xml  invdoublependulum.xml  invpendulum.xml  mjAgent.h  mjEnvironment.h  mjdata.txt  mjenvironment.cpp  mjenvironment.vcxproj  mjenvironment.vcxproj.filters  model_file.txt  oldMujocoBasic.h  swimmer.xml  walker2d.xml
mjenvironment/generation0/: _0ant1layer_0  _0ant1layer_1  _0ant1layer_2  _0ant1layer_3  _0ant1topology  _0humanoidlayer_1  _0humanoidlayer_2  _0humanoidlayer_3  _0humanoidlayer_4  _0humanoidtopology  _0invdp2dlayer_0  _0invdp2dlayer_1  _0invdp2dlayer_2  _0invdp2dlayer_3  _0invdp2dlayer_4  _0invdp2dtopology  _0invdp2layer_1  _0invdp2layer_2  _0invdp2layer_3  _0invdp4noreclayer_1  _0invdp4noreclayer_2  _0invdp4noreclayer_3  _0invdp4noreclayer_4  _0walker2d  _0walker2dRewardEng2layer_1  _0walker2dRewardEng2layer_2  _0walker2dRewardEng2layer_3  _0walker2dRewardEng3layer_1  _0walker2dRewardEng3layer_2  _0walker2dRewardEng3layer_3  _0walker2dRewardEng3layer_4  _0walker2dRewardEng3topology  _0walker2dRewardEng4  _0walker2dRewardEng4layer_1  _0walker2dRewardEng4layer_2  _0walker2dRewardEng4layer_3  _0walker2dRewardEng4layer_4  _0walker2dRewardEng5layer_1  _0walker2dRewardEng5layer_2  _0walker2dRewardEng5layer_3  (+7 more)
mjenvironment/generation1000/: _0ant1layer_1  _0ant1layer_2  _0ant1layer_3  _0humanoidlayer_4  _0invdp2dlayer_1  _0invdp2dlayer_2  _0invdp2dlayer_3  _0invdp2dlayer_4  _0invdp4noreclayer_2  _0walker2dRewardEng2  _0walker2dRewardEng3layer_4  _0walker2dRewardEng5layer_1  _0walker2dRewardEng5layer_2  _0walker2dRewardEng5layer_3  _0walker2dRewardEng5layer_4  _0walker2dRewardEnglayer_1  _0walker2dlayer_1  _0walker2dlayer_2  _0walker2dlayer_3  _0walker2dtopology
mjenvironment/generation10000/: _0invdp2dlayer_1  _0invdp2dlayer_3  _0walker2dRewardEng5layer_1
mjenvironment/generation100000/: _0invdp2dlayer_1  _0invdp2dlayer_2  _0invdp2dlayer_3
mjenvironment/generation101000/: _0invdp2dlayer_1  _0invdp2dlayer_2  _0invdp2dlayer_3
mjenvironment/generation102000/: _0invdp2dlayer_1  (+2 more)
rl_test/: CMakeLists.txt  RL_MJ_Environment.cpp  RL_MJ_Environment.h  humanoid.xml  humanoidball.xml  rl_test.cpp
(+1089 files in other folders)
